[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/images/logo.png" type="Texture" id=1]
[ext_resource path="res://scenes/buttons/HostGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/utility/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/buttons/ExitButton.tscn" type="PackedScene" id=5]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 110.0
margin_right = -200.0
margin_bottom = -110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1520.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Menu"]
margin_right = 1520.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Menu"]
margin_top = 4.0
margin_right = 1520.0
margin_bottom = 324.0
rect_min_size = Vector2( 500, 320 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="MarginContainer/Menu"]
margin_top = 328.0
margin_right = 1520.0
margin_bottom = 860.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/Menu/CenterRow"]
margin_right = 758.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="HostGameButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 176.0
margin_right = 758.0
margin_bottom = 256.0
rect_min_size = Vector2( 370, 80 )
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ExitButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 276.0
margin_right = 758.0
margin_bottom = 356.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Menu/CenterRow"]
margin_left = 762.0
margin_right = 1520.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
